CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(CopyExample)
include(TestBigEndian)

set(DIR_OBJECT ${PROJECT_SOURCE_DIR}/build)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${DIR_OBJECT})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${DIR_OBJECT})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${DIR_OBJECT})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${DIR_OBJECT})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${DIR_OBJECT})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE  ${DIR_OBJECT})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${DIR_OBJECT})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${DIR_OBJECT})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${DIR_OBJECT})
set(CMAKE_EXECUTABLE_OUTPUT_PATH ${DIR_OBJECT})
set(CMAKE_EXECUTABLE_OUTPUT_PATH_DEBUG ${DIR_OBJECT})
set(CMAKE_EXECUTABLE_OUTPUT_PATH_RELEASE ${DIR_OBJECT})


test_big_endian(ORDER_BIG_ENDIAN)

set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")

include_directories(${PROJECT_SOURCE_DIR} JSON U8 CmdLine)

add_subdirectory(U8)
add_subdirectory(JSON)
add_subdirectory(CloudApi)
add_subdirectory(Main)
