CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(CopyExample)
INCLUDE(TestBigEndian)

SET(DIR_OBJECT ${PROJECT_SOURCE_DIR}/build)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${DIR_OBJECT})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${DIR_OBJECT})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${DIR_OBJECT})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${DIR_OBJECT})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${DIR_OBJECT})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE  ${DIR_OBJECT})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${DIR_OBJECT})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${DIR_OBJECT})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${DIR_OBJECT})
SET(CMAKE_EXECUTABLE_OUTPUT_PATH ${DIR_OBJECT})
SET(CMAKE_EXECUTABLE_OUTPUT_PATH_DEBUG ${DIR_OBJECT})
SET(CMAKE_EXECUTABLE_OUTPUT_PATH_RELEASE ${DIR_OBJECT})

test_big_endian(ORDER_BIG_ENDIAN)

SET(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} JSON U8 CmdLine)

ADD_SUBDIRECTORY(liboauthcpp/build)
ADD_SUBDIRECTORY(U8)
ADD_SUBDIRECTORY(JSON)
ADD_SUBDIRECTORY(CloudApi)
ADD_SUBDIRECTORY(Main)
