ADD_EXECUTABLE(CopyExample Main.cpp)
ADD_DEPENDENCIES(CopyExample CloudApi)
FIND_PACKAGE(CURL REQUIRED)
FIND_PACKAGE(Boost 1.54 COMPONENTS program_options REQUIRED)
FIND_PACKAGE(OpenSSL REQUIRED)
INCLUDE_DIRECTORIES(${OpenSSL_INCLUDE_DIR} ${Boost_INCLUDE_DIR})
LINK_DIRECTORIES(${CURL_INCLUDE_DIRS} ${Boost_INCLUDE_DIR} ${OpenSSL_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(CopyExample CloudApi ${CURL_LIBRARIES} ${Boost_LIBRARIES} crypto)
