ADD_EXECUTABLE(CopyExample Main.cpp)
ADD_DEPENDENCIES(CopyExample CloudApi)

if(WINDOWS)
	file(GLOB Boost_LIBRARIES ${PROJECT_SOURCE_DIR}/libs/win/boost-1.55.0/lib.${PROC}/libboost_program_options-*gd*)
	set(Boost_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/libs/win/boost-1.55.0/inc)
	set(CURL_LIBRARIES ${PROJECT_SOURCE_DIR}/libs/win/curl-7.28.1/lib.${PROC}/libcurl.lib)
	set(CURL_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/libs/win/curl-7.28.1/inc)
	file(GLOB OpenSSL_LIBS ${PROJECT_SOURCE_DIR}/libs/win/openssl-1.0.1c/lib.${PROC}/*)
	set(OpenSSL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/libs/win/openssl-1.0.1c/inc.${PROC})
else()
	FIND_PACKAGE(CURL REQUIRED)
	FIND_PACKAGE(Boost 1.54 COMPONENTS program_options REQUIRED)
	FIND_PACKAGE(OpenSSL REQUIRED)
endif()

INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIRS} ${OpenSSL_INCLUDE_DIR} ${Boost_INCLUDE_DIR})
LINK_DIRECTORIES(${CURL_INCLUDE_DIRS} ${Boost_INCLUDE_DIR} ${OpenSSL_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(CopyExample CloudApi ${CURL_LIBRARIES} ${Boost_LIBRARIES})

if(WINDOWS)
	TARGET_LINK_LIBRARIES(CopyExample Crypt32)
else()
	TARGET_LINK_LIBRARIES(CopyExample crypto)
endif()
